mise en place de l'application igv manque un peu de style 	modified:   .gitignore 	modified:   angular.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.html 	modified:   src/app/app.module.ts 	modified:   src/app/igv/igv.component.html 	modified:   src/app/igv/igv.component.scss 	modified:   src/app/igv/igv.component.ts 	new file:   src/igv.d.ts 	modified:   src/index.html 	modified:   src/styles.scss 	modified:   tsconfig.app.json

--- a/src/app/igv/igv.component.html
+++ b/src/app/igv/igv.component.html
@@ -1,13 +1,15 @@
-<mat-card>
-    <mat-form-field class="url-input">
-       <mat-label>Clearable input</mat-label>
-       <input matInput type="text" [(ngModel)]="trackUrl">
-       <button *ngIf="trackUrl" matSuffix mat-icon-button aria-label="Clear" (click)="trackUrl=''">
-          <mat-icon>close</mat-icon>
-       </button>
-    </mat-form-field>
-    <button mat-button color="accent" class="add-button" (click)="addTrackByUrl()">Add Track</button>
- </mat-card>
- <div style="margin-top: 20px">
-    <div #igvdiv></div>
- </div>
+<div id="app">
+    <mat-card>
+        <mat-form-field class="url-input">
+        <mat-label>Clearable input</mat-label>
+        <input matInput type="text">
+        <button *ngIf="trackUrl" matSuffix mat-icon-button aria-label="Clear" (click)="trackUrl=''">
+            <mat-icon>close</mat-icon>
+        </button>
+        </mat-form-field>
+        <button mat-button color="accent" class="add-button" (click)="addTrackByUrl()">Add Track</button>
+    </mat-card>
+    <div style="margin-top: 20px">
+        <div #igvdiv></div>
+    </div>
+</div>
